# clutter-tray

./: Makefile.am  configure.ac
src/: Makefile.am
test/: Makefile  main.c
